--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,10 +1,10 @@
 schema_version = "1.0.0"
 
 # Blender extension manifest
-id = "event_sounds_vse"
+id = "motion_sounds"
 version = "0.7.0"
-name = "Event Sounds VSE"
-tagline = "Insert event sounds into the Video Sequence Editor"
+name = "Motion Sounds"
+tagline = "Add sounds to your animation based on motion events"
 maintainer = "Jan-hendrik Müller"
 # Supported types: "add-on", "theme"
 type = "add-on"
